fix post toc enter align

--- a/doc/post_toc.css
+++ b/doc/post_toc.css
@@ -34,7 +34,7 @@ body {
 .post-list {
   list-style-type: none;
   padding: 0;
-  text-align: left;
+  text-align: center;
 }
 
 .post-list li {
